gitops/overlays/demo-with-operators/delete-librechat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat
$patch: delete
