gitops/overlays/demo-with-operators/delete-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat-mongo
$patch: delete
