gitops/overlays/demo-with-operators/delete-postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llamastack-postgres
$patch: delete
