gitops/overlays/demo-with-operators/delete-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamastack-postgres
$patch: delete
