gitops/overlays/demo-with-operators/delete-librechat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: librechat
$patch: delete
